<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.MainActivity">
    
<!--    <TextView
        android:id="@+id/tv_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="29dp"
        android:layout_marginStart="37dp"

        android:text="@string/main_title_task"
        android:textColor="@color/default_text_color"
        android:textSize="24sp"
        android:fontFamily="@font/roboto_bold"
    />-->

    <TextView
        android:id="@+id/tv_task_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="29dp"
        android:layout_marginStart="37dp"

        android:text="@string/title_task"
        android:textColor="@color/default_text_color"
        android:textSize="24sp"
        android:fontFamily="@font/roboto_bold"
    />

    <include
        android:id="@+id/include_empty_task_state"
        layout="@layout/task_empty_state"
        tools:visibility="gone"
    />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_main_task"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_task_title"
        app:layout_constraintBottom_toTopOf="@+id/coordinator_layout"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="8"
        tools:listitem="@layout/item_task"

        tools:visibility="visible"
    />

    <ImageButton
        android:id="@+id/img_btn_change_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/coordinator_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="20dp"
        android:background="#00FFFFFF"
        android:src="@drawable/ic_moon"
        android:contentDescription="@string/btn_change_mode_description"
    />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" >

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_app_bar"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background_color_bottom_bar"
            app:fabCradleMargin="0dp"
            app:fabCradleRoundedCornerRadius="0dp"
        />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_create_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:contentDescription="@string/fab_add_task_description"

            android:backgroundTint="@color/background_color_create_floating_button"
            app:tint="@color/floating_button_icon_color"
            app:borderWidth="0dp"
            android:scaleType="center"
            android:src="@drawable/ic_add"
            app:layout_anchor="@id/bottom_app_bar"
            app:maxImageSize="32dp"
        />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>





</androidx.constraintlayout.widget.ConstraintLayout>
